<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="error_invalid_number">Please enter valid numbers!</string>
    <string name="operator">Operator:</string>
    <string name="value_2">Value 2:</string>
    <string name="value_1">Value 1:</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string-array name="op_array">
        <item>add</item>
        <item>subtract</item>
        <item>multiply</item>
        <item>divide</item>
    </string-array>
</resources>
